--- a/data.yaml
+++ b/data.yaml
@@ -1055,7 +1055,9 @@ language:
     papers: P1967R14
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202502
     msvc: null
 - name: __cpp_range_based_for
   rows:
