libc++ defines __cpp_lib_ranges_join_with

--- a/data.yaml
+++ b/data.yaml
@@ -4642,7 +4642,9 @@ library:
     papers: P2441R2
     cppreference-description: '{{lc|std::ranges::join_with_view}}'
   support:
-    clang: null
+    clang:
+    - since: C++23
+      value: 202202
     gcc:
     - since: C++23
       value: 202202
