--- a/data.yaml
+++ b/data.yaml
@@ -443,7 +443,9 @@ language:
     papers: P3068R6
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202411
     msvc: null
 - name: __cpp_constexpr_in_decltype
   rows:
