--- a/data.yaml
+++ b/data.yaml
@@ -1311,7 +1311,9 @@ language:
     papers: P2786R13
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202502
     msvc: null
 - name: __cpp_trivial_union
   rows:
