libstdc++ reverted addition of __cpp_lib_constexpr_exceptions

--- a/data.yaml
+++ b/data.yaml
@@ -2301,10 +2301,7 @@ library:
     papers: P3378R2
   support:
     clang: null
-    gcc:
-    - since: C++26
-      depends: __cpp_constexpr_exceptions >= 202411L
-      value: 202411
+    gcc: null
     msvc: null
 - name: __cpp_lib_constexpr_flat_map
   header_list: flat_map
