--- a/data.yaml
+++ b/data.yaml
@@ -2104,7 +2104,9 @@ library:
     cppreference-description: Make {{lc|std::common_reference_t}} of {{lc|std::reference_wrapper}}
       a reference type
   support:
-    clang: null
+    clang:
+    - since: C++20
+      value: 202302
     gcc: null
     msvc:
     - since: C++20
@@ -2117,7 +2119,9 @@ library:
     cppreference-description: Make {{lc|std::common_reference_t}} of {{lc|std::reference_wrapper}}
       a reference type
   support:
-    clang: null
+    clang:
+    - since: C++20
+      value: 202302
     gcc: null
     msvc:
     - since: C++20
