--- a/data.yaml
+++ b/data.yaml
@@ -477,7 +477,9 @@ language:
     papers: P3533R2
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202506
     msvc: null
 - name: __cpp_constinit
   rows:
