--- a/data.yaml
+++ b/data.yaml
@@ -639,7 +639,9 @@ language:
     papers: P1306R5
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202506
     msvc: null
 - name: __cpp_explicit_this_parameter
   rows:
