libc++ defines __cpp_lib_string_subview

--- a/data.yaml
+++ b/data.yaml
@@ -5500,7 +5500,9 @@ library:
   - value: 202506
     papers: P3044R2
   support:
-    clang: null
+    clang:
+    - since: C++26
+      value: 202506
     gcc: null
     msvc: null
 - name: __cpp_lib_string_udls
