--- a/data.yaml
+++ b/data.yaml
@@ -1858,7 +1858,6 @@ library:
   support:
     clang:
     - since: C++20
-      depends: _LIBCPP_AVAILABILITY_HAS_SYNC
       value: 201907
     gcc:
     - since: C++20
@@ -1883,7 +1882,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: _LIBCPP_HAS_THREADS && _LIBCPP_AVAILABILITY_HAS_SYNC
+      depends: _LIBCPP_HAS_THREADS
       value: 201907
     gcc:
     - since: C++20
@@ -2960,7 +2959,7 @@ library:
   support:
     clang:
     - since: C++17
-      depends: _LIBCPP_HAS_FILESYSTEM && _LIBCPP_AVAILABILITY_HAS_FILESYSTEM_LIBRARY
+      depends: _LIBCPP_HAS_FILESYSTEM
       value: 201703
     gcc:
     - since: C++17
@@ -3995,7 +3994,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: _LIBCPP_HAS_THREADS && _LIBCPP_AVAILABILITY_HAS_SYNC
+      depends: _LIBCPP_HAS_THREADS
       value: 201911
     gcc:
     - since: C++20
@@ -4013,7 +4012,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: _LIBCPP_HAS_THREADS && _LIBCPP_AVAILABILITY_HAS_SYNC
+      depends: _LIBCPP_HAS_THREADS
       value: 201907
     gcc:
     - since: C++20
@@ -5122,7 +5121,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: _LIBCPP_HAS_THREADS && _LIBCPP_AVAILABILITY_HAS_SYNC
+      depends: _LIBCPP_HAS_THREADS
       value: 201907
     gcc:
     - since: C++20
