libc++ updated __cpp_lib_atomic_ref

--- a/data.yaml
+++ b/data.yaml
@@ -1803,6 +1803,8 @@ library:
     clang:
     - since: C++20
       value: 201806
+    - since: C++26
+      value: 202411
     gcc:
     - since: C++20
       value: 201806
