--- a/data.yaml
+++ b/data.yaml
@@ -2393,7 +2393,9 @@ library:
   - value: 202502
     papers: P3372R3
   support:
-    clang: null
+    clang:
+    - since: C++26
+      value: 202502
     gcc: null
     msvc: null
 - name: __cpp_lib_constexpr_flat_set
@@ -2402,7 +2404,9 @@ library:
   - value: 202502
     papers: P3372R3
   support:
-    clang: null
+    clang:
+    - since: C++26
+      value: 202502
     gcc: null
     msvc: null
 - name: __cpp_lib_constexpr_forward_list
@@ -3989,7 +3993,10 @@ library:
     papers: P2641R4
     cppreference-description: Checking if a union alternative is active ({{ltt|cpp/types/is_within_lifetime|std::is_within_lifetime}})
   support:
-    clang: null
+    clang:
+    - since: C++26
+      depends: __has_builtin(__builtin_is_within_lifetime)
+      value: 202306
     gcc: null
     msvc: null
 - name: __cpp_lib_jthread
@@ -4402,6 +4409,8 @@ library:
       value: 202106
     - since: C++23
       value: 202110
+    - since: C++26
+      value: 202506
     gcc:
     - since: C++17
       value: 201606
